apps/base/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-jellyfin
  labels:
    trust.cert-manager.io/inject-bundle: "true"
