apps/base/jellyfin/themepark-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-themepark
  namespace: app-jellyfin
  labels:
    themepark.dev/managed: "true"
spec:
  plugin:
    themepark:
      app: jellyfin
      theme: overseerr
