apps/base/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jellyfin
  namespace: app-jellyfin

spec:
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.2ubu2404-ls7
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: movies
              mountPath: /movies
            - name: config
              mountPath: /config
            - name: series
              mountPath: /series
            - name: youtube
              mountPath: /youtube
            - name: music
              mountPath: /music
            - name: transcode
              mountPath: /config/cache/transcodes
      volumes:
        - name: movies
          hostPath:
            path: /mnt/spike/mass-storage/videos/movies
            type: Directory
        - name: series
          hostPath:
            path: /mnt/spike/mass-storage/videos/series
            type: Directory
        - name: youtube
          hostPath:
            path: /mnt/spike/mass-storage/videos/youtube
            type: Directory
        - name: music
          hostPath:
            path: /mnt/spike/mass-storage/music
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: transcode
          emptyDir:
            sizeLimit: 5Gi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: home.arpa/zfs-pool
                    operator: In
                    values:
                      - "true"
