apps/base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: app-jellyfin

spec:
  ports:
    - name: http
      port: 8096
  selector:
    app: jellyfin
