apps/base/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: app-jellyfin

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`jellyfin.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: jellyfin-themepark
          namespace: app-jellyfin
      services:
        - name: jellyfin
          namespace: app-jellyfin
          port: http
  tls:
    secretName: traefik-tls
